@@ -1,0 +1,8 @@
+Title: check_dns: allow to specify multiple expected answers
+Level: 1
+Component: checks
+Version: 1.2.5i1
+Date: 1391521300
+Class: feature
+
+
